# epilogue

./: ProjectHome.md  ShipControls.md  epilogue.1  line.h
src/: Makefile.am  Makefile.in  asteroid.cpp  bannertexts  capital_ship.h  epilogue.h  epilogue.tgz  explosion.cpp  explosion.h  hero.cpp  hero.h  paint.h  phys_obj.cpp  ship.cpp  shot.cpp  spacestation1.sprite  sprite.h  text.h  title.cpp  title.h  wave.cpp
trunk/: epilogue.1  line.cpp  ship.h
trunk/src/: asteroid.h  capital_ship.cpp  cargo_up.sprite  epilogue.cpp  goon.cpp  goon.h  osgard1.sprite  paint.cpp  phys_obj.h  shot.h  sprite.cpp  text.cpp  title.sprite  wave.h
wiki/: ShipControls.wiki
