bin_PROGRAMS = epilogue
epilogue_SOURCES = epilogue.cpp phys_obj.cpp asteroid.cpp paint.cpp hero.cpp \
		title.cpp goon.cpp shot.cpp captial_ship.cpp sprite.cpp	explosion.cpp wave.cpp \
	texts.sprites

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
epilogue_LDFLAGS = $(all_libraries)
noinst_HEADERS = phys_obj.h asteroid.h paint.h hero.h 	epilogue.h title.h \
	goon.h shot.h captial_ship.h sprite.h explosion.h wave.h
